<resources>
    <string name="app_name">PhotoEditor pro</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="settings">Settings</string>
    <string name="rate_photo_editor">Rate Photo Editor</string>
    <string name="share_photo_editor">Share Photo Editor</string>
    <string name="report_bug">Report Bug</string>
    <string name="restart_app">Restart App</string>
    <string name="about_photo_editor">About Photo Editor</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="settingss">Settings</string>
    <string name="gallery">Gallery</string>
    <string name="restartdg">Do you want to Restart Application?</string>

    <string-array name="pre_conn_entries">
        <item>WiFi</item>
        <item>Mobile Data</item>
        <item>WiFi/Mobile Data</item>
    </string-array>

    <string-array name="pre_conn_type">

        <item>WiFi</item>
        <item>Mobile</item>
        <item>WiFi_Mobile</item>


    </string-array>

</resources>